homebridge/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      containers:
        - name: homebridge
          image: homebridge/homebridge:2024-05-02
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            allowPrivilegeEscalation: true
          resources:
            requests:
              memory: "265Mi"
              cpu: "250m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          volumeMounts:
            - name: homebridge-accessory-info
              mountPath: /homebridge/persist/AccessoryInfo.0E83BA9DE9B8.json.template
              subPath: AccessoryInfo.0E83BA9DE9B8.json
            - name: homebridge-config
              mountPath: /homebridge/config.json.template
              subPath: config.json
            - name: homebridge-config
              mountPath: /homebridge/auth.json.template
              subPath: auth.json
            - name: homebridge-config
              mountPath: /homebridge/startup.sh
              subPath: startup.sh
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: homebridge
              containerPort: 51221
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8090
          readinessProbe:
            httpGet:
              path: /
              port: 8090
          startupProbe:
            httpGet:
              path: /
              port: 8090
            failureThreshold: 30
            periodSeconds: 10
      volumes:
      - name: homebridge-config
        configMap:
          name: homebridge-configmap
          defaultMode: 0711
      - name: homebridge-accessory-info
        secret:
          secretName: homebridge-accessory-info
